--- a/.github/workflows/basic_CI.yml
+++ b/.github/workflows/basic_CI.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Basic CI
 
 on:
 
@@ -9,6 +9,14 @@ on:
       - main
 
       - jenk
+
+  pull_request:
+
+    types:
+
+      - opened
+
+      - synchronize
 
   workflow_dispatch:
 
